public/css/desktop.css
#desktop {
	display: flex;
	flex-wrap: wrap;
	flex-direction: column;
	justify-content: flex-start;
	align-content: flex-start;
	align-items: flex-start;
	overflow: auto;
}

#desktop > .icon {
	flex: 0 1 auto;
	align-self: flex-start;
	width: 75px;
	height: 95px;
	margin: 4px 2px;
	display: flex;
	justify-content: flex-start;
	align-items: center;
	flex-flow: column;
}

.icon .icon-tooltip {
	position: absolute;
	background-color: rgba(249, 249, 249, 1);
	color: #000;
	white-space: pre;
	border-radius: 3px;
	box-shadow: 3px 3px 5px 0px rgba(0, 12, 26, 0.2);
	padding: 2px 6px;
	pointer-events: none;
	transition: opacity 225ms ease-in-out;
	opacity: 0;
}

.icon .icon-tooltip.active {
	opacity: 1;
}

.icon .context-menu {
	position: absolute;
	background-color: rgba(48, 48, 48, 1);
	color: #fff;
	white-space: pre;
	border-radius: 3px;
	box-shadow: 2px 2px 8px 0px rgba(0, 12, 26, 0.2);
	border: 1px solid rgba(64, 64, 64, 1);
	padding: 3px 2px;
	/* pointer-events: none; */
	transition: opacity 225ms ease-in-out;
	opacity: 0;
	display: flex;
	flex-flow: column;
	font-size: 0.925em;
}

.icon .context-menu.open {
	opacity: 1;
}

.context-menu > * {
	padding: 3px 24px;
}

.context-menu hr {
	margin-top: 4px;
	border: transparent;
	border-top: 1px solid rgba(64, 64, 64, 1);
	position: relative;
}

.context-menu > span {
	border-radius: 2px;
	transition: background-color 125ms linear;
}

.context-menu > span:hover {
	background-color: rgba(54, 54, 54, 1);
}

#desktop > .icon:hover {
	background-color: rgba(236, 236, 236, 0.196);
}

#desktop .icon:has(.context-menu:hover):hover,
#desktop > .icon-selected {
	border-radius: 3px;
	background-color: #ececec56;
}

#desktop > .icon img {
	width: 48px;
	height: auto;
	max-height: 48px;
	margin-top: 3px;
}

#desktop > .icon img:before {
	background-image: url("../media/file-icons/unknown.webp");
	position: relative;
	width: 48px;
	height: 48px;
	content: " ";
	display: block;
	background-size: cover;
}

figcaption {
	width: 100%;
	inline-size: 71px;
	height: min-content;
	padding: 0 2px;
	position: relative;
	margin-top: 4px;
}

textarea {
	width: max-content;
	max-width: 100%;
	resize: none;
	outline: none;
	text-align: center;
	overflow-wrap: break-word;
	text-overflow: clip;
	white-space: normal;
	overflow: hidden;
	border: 0;
	margin: -2px;
	padding: 2px 4px 4px 4px;
	font-size: 11px;
	color: #000;
	field-sizing: content;
	box-sizing: border-box;
	margin-left: auto;
	margin-right: auto;
	/* display: block; */
	display: -webkit-box;
	-webkit-box-orient: vertical;
	-webkit-line-clamp: 2;
	line-clamp: 2;
	height: 2lh;
}

textarea:focus:not(:read-only) {
	/* margin-top: 0; */
}

textarea:read-only::selection {
	background: transparent;
}

#desktop > figure > img {
	user-select: none;
}

textarea::-webkit-scrollbar {
	display: none;
}

textarea:read-only {
	text-shadow: 2px 1px 3px rgb(0, 0, 0);
	background-color: transparent;
	color: rgba(255, 255, 255, 0.9);
}

textarea:not(:read-only),
#desktop > figure.icon-selected:focus-within textarea {
	display: block;
	height: fit-content;
	/* display: -webkit-box;
	-webkit-box-orient: vertical;
	-webkit-line-clamp: 2;
	line-clamp: 2;
	height: 2lh; */
}

